static/style/main.scss
@import 'variables';
@import 'fonts';
@import 'mixins';
@import 'loader';
@import 'navbar';
@import 'form';
@import 'tabs';
@import 'rsvp';

*{
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

h1,
h2,
h3,
.header{
	font-family: 'Open Sans', sans-serif;
	font-weight: bold;
}

body{
	background-color: $baseBackgroundColor;
	font-family: 'Lato', sans-serif;

	.body-bg{
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		opacity: 0;
	}

	a{
		color: $wcMaroon;

		&:hover{
			color: lighten($wcMaroon, 2.5%);
		}

		&:active{
			color: darken($wcMaroon, 5%);
		}
	}

	&:not(.mobile){
		.navbar{
			display: none;
		}
	}

	&.mobile{
		overflow-x: hidden;
		width: 100%;

		.container{
			width: 100%;
		}

		.song-request-form{
			width: 100%;
		}

		.registry-img{
			width: 80%;
			max-width: 80%;
		}
	}
}

.clearfix:after {
  content: ' ';
  display: block;
  clear: both;
}

.pull-right{
	float: right;
}

.center{
	text-align: center;
}

.align-left{
	text-align: left;
}

.hide{
	display: none;
}

.invisible{
	opacity: 0;
}

.max-width{
	width: 100%;
}

table{
	border-collapse: collapse;
}

.smaller{
	zoom: 0.9;
}

.nostyle{
	list-style: none;
}

.left-col{
	text-align: center;
	transform: translateY(calc(50% - 1.35em));
}

.navbar{
	z-index: 1100;
	@include drop-shadow();
}
.navbar-collapse{
	z-index: 1200;
	background-color: #fff;
}

.navbar-brand{
	z-index: 1300;
	padding-bottom: 0.3em;
}

.navbar-toggler{
	z-index: 1400;
}

.container{
	width: 82%;

	&.rsvp-container{
		width: 35%;
	}
}

.header-bg {
	position: relative;
	margin:auto;
	width: 100%;
	height: 658px;
	background-size: cover;
	color: #fff;
}

body {
	width: 100%;
}

// Right now this only works for iOS :/
@supports (background-image: filter(url('i.jpg'), blur(1px))) {
	.bg-lazyload {
		transform: translateZ(0);
	}
	.bg-lazyload.loaded {
		animation: sharpen .5s both;
	}
}

.bg-lazyload{
	@include fade-in();

	&.ll-loaded{
		opacity: 1;
	}
}

.shadow{
	@include drop-shadow(0, 5px, 15px, rgba(0,0,0,0.05));
}

.header-img-wrap{
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	margin-top: 3em;

	.header-img{
		width: 350px;
		max-width: 100%;
	}
}

.map-frame{
	width: 100%;
	height: 100%;
	min-height: 450px;
	border: none;
}

.address-dl{
	dt{
		font-size: 1.35em;
	}
	dd{
		margin-bottom: 0;
	}
}

.registry-img{
	max-width: 50%;

	&:not(:first-of-type){
		margin-top: 4em;
	}
}

.song-request-form{
	width: 40%;
	margin: 0 auto;

	label{
		font-size: 1.2em;
	}

	.submit-wrap{
		margin-top: 2em;
	}
}

.main-img-wrap{
	margin-top: 2.5em;

	.main-img{
		max-width: 100%;
	}
}

